🍖🛋 Checkpoint ./public/index.html:577339/202

--- a/public/index.html
+++ b/public/index.html
@@ -280,6 +280,7 @@
 
     <template id="jam-component">
       <div class="jam">
+
         <div class="flex items-center justify-center">
           <div class="m-2">
             Bar
@@ -296,6 +297,14 @@
             {{ beat }}
           </div>
         </div>
+        
+        <h2>
+          Your recording
+        </h2>
+        <p>
+          Adjust your latency until it aligns with the beats.
+        </p>
+
       </div>
     </template>
     <script>
